objects/ExchangeOptout__c.object
<CustomObject>
    <fields>
        <fullName>EmailDate__c</fullName>
        <description>The datetime when the email is sent.</description>
        <label>Email Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of the user opting out.</description>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ItemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the unique Id associated to every email in exchange.</description>
        <externalId>true</externalId>
        <label>ItemId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject of the email</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>This object contains the opt-outs of the contacts done through exchange.</description>
    <label>Exchange Optout</label>
    <nameField>
        <displayFormat>EO-{0000000000}</displayFormat>
        <label>ExchangeOptout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Optouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>EmailDate__c</columns>
        <columns>Subject__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>